--- a/env.example
+++ b/env.example
@@ -18,3 +18,8 @@ IDLE_TIMEOUT=60
 # REDIS_URL=redis://localhost:6379
 # SMTP_HOST=smtp.example.com
 # SMTP_PORT=587
+
+# JWT
+JWT_SECRET=your-super-secret-key-change-in-production
+JWT_EXPIRATION=86400
+JWT_ISSUER=boilerplate-go
