docs: add client handover documentation
- Add comprehensive README.md with:
  - Quick start guide
  - Project structure
  - Configuration reference
  - API endpoints documentation
  - Deployment instructions

- Add LICENSE (MIT)
- Clean up env.example (remove duplicates)
- Add initial test coverage:
  - Health endpoint test
  - JWT service tests (generate, validate, expired)

--- a/env.example
+++ b/env.example
@@ -1,25 +1,33 @@
+# =============================================================================
 # Application
+# =============================================================================
 APP_ENV=development
 PORT=8080
+LOG_LEVEL=info
 
-# Server timeouts (in seconds)
+# =============================================================================
+# Server Timeouts (in seconds)
+# =============================================================================
 READ_TIMEOUT=15
 WRITE_TIMEOUT=15
 IDLE_TIMEOUT=60
 
-# Database (uncomment and configure as needed)
-# DATABASE_URL=postgres://user:password@localhost:5432/dbname?sslmode=disable
-
-# JWT (uncomment and configure as needed)
-# JWT_SECRET=your-super-secret-key
-# JWT_EXPIRY=24h
-
-# External services (uncomment and configure as needed)
-# REDIS_URL=redis://localhost:6379
-# SMTP_HOST=smtp.example.com
-# SMTP_PORT=587
-
-# JWT
+# =============================================================================
+# JWT Authentication
+# =============================================================================
+# IMPORTANT: In production, use a strong secret (at least 32 characters)
 JWT_SECRET=your-super-secret-key-change-in-production
 JWT_EXPIRATION=86400
 JWT_ISSUER=boilerplate-go
+
+# =============================================================================
+# Database (uncomment and configure as needed)
+# =============================================================================
+# DATABASE_URL=postgres://user:password@localhost:5432/dbname?sslmode=disable
+
+# =============================================================================
+# External Services (uncomment and configure as needed)
+# =============================================================================
+# REDIS_URL=redis://localhost:6379
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
